<resources>
    <string name="app_name">bmiCalculator</string>
    <string name="title_activity_result">Result</string>
    <string name="age">Age:</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="weight_kg">Weight (kg):</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="height_cm">Height (cm):</string>
    <string name="enter_your_height">Enter your height</string>
    <string name="calculate">Calculate</string>
    <string name="back">Back</string>

</resources>