<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/age"
        android:textColor="#616161"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ageInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ageLabel"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/enter_your_age"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#795548"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/weightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ageInput"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/weight_kg"
        android:textColor="#616161"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/weightLabel"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/enter_your_weight"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#795548"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/heightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weightInput"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/height_cm"
        android:textColor="#616161"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/heightInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heightLabel"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/enter_your_height"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textColorHint="#795548"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/heightInput"/>

</RelativeLayout>
